--- a/package.json
+++ b/package.json
@@ -2,16 +2,32 @@
   "name": "fastify-tutorial",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "commitizen": "^4.0.3",
+    "fastify": "^2.0.0",
+    "fastify-plugin": "^1.5.0",
+    "fastify-autoload": "^1.0.0",
+    "fastify-cli": "^1.2.0"
+  },
+  "devDependencies": {
+    "tap": "^12.5.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap test/**/*.test.js",
+    "start": "fastify start -l info app.js",
+    "dev": "fastify start -l info -P app.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/yoshi1125hisa/fastify-tutorial.git"
+    "url": "git+https://github.com/yoshi1125hisa/fastify-tutorial.git"
   },
-  "author": "yoshi1125hisa",
-  "license": "MIT",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/yoshi1125hisa/fastify-tutorial/issues"
   },
